--- a/src/app/goal-form/goal-form.component.html
+++ b/src/app/goal-form/goal-form.component.html
@@ -1,3 +1,4 @@
+<!-- html form file -->
 <div class="container-fluid">
     <div class="row">
         <form (ngSubmit)='submitGoal()' #goalForm='ngForm'>
